--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ googleapis-common-protos==1.59.1
 greenlet==2.0.2
 grpcio==1.54.2
 grpcio-status==1.54.2
+gunicorn==20.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
