--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ colorama==0.4.6
 cryptography==41.0.1
 Deprecated==1.2.14
 distlib==0.3.6
+dnspython==2.3.0
 dominate==2.7.0
+email-validator==2.0.0.post2
 filelock==3.12.0
 firebase-rest-api==1.10.1
 Flask==2.2.5
